# oauth2-mock

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  release.sh
config/: application.json  users.json  users.toml
examples/: oauth2.http  test_client.py  test_oauth2.sh
src/: configuration.rs  main.rs  templates.rs
templates/: authorization.html  home.hbs  home.html  login.hbs  login.hbs.json  style.css
