[package]
name = "oauth2-mock"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.5"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22.1"
rand = "0.9.2"
url = "2.4"
clap = { version = "4.5.44", features = ["derive"] }
tera = "1.19"
