[package]
name = "oauth2-mock"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["net","rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
chrono = { version = "0.4.41", features = ["serde"] }
base64 = "0.22.1"
rand = "0.9.2"
url = "2.5.7"
clap = { version = "4.5.46", features = ["derive"] }
handlebars = {version = "6.3.2", features = ["rust-embed"]}
rust-embed={version ="8.7.2", features = ["include-exclude"]}